# investiq-platform

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  2. 行业选择与组合支持平台 PRD（A股+H股，中周期长多）-专家.md  5.8 行业选择与组合支持平台（A股+H股，中周期长多）全量-产品.md  CLAUDE_CODE_HANDOFF.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT_STATUS.md  JETSON_ULTIMATE_OPTIMIZATION_COMPLETE.md  LICENSE  MICROSERVICES_ARCHITECTURE_COMPLETE.md  Makefile  PROJECT_COMPLETION_SUMMARY.md  README.md  docker-compose.dev.yml  docker-compose.jetson.yml  pyproject.toml
.devcontainer/: post-create.sh
backend/app/: main.py
backend/app/api/: __init__.py
backend/app/api/api_v1/: api.py
backend/app/api/api_v1/endpoints/: __init__.py  ai.py  alerts.py  analysis.py  data.py  evidence.py  gatekeeper.py  liquidity.py  performance.py  portfolio.py  scoring.py
backend/app/core/: config.py  database.py  deps.py  exceptions.py  logging.py  redis.py
backend/app/models/: __init__.py  alert.py  audit.py  equity.py  evidence.py  industry.py  portfolio.py  snapshots.py  user.py
backend/app/services/: ai_clients.py  ai_service.py  alert_service.py  audit_service.py  confidence_service.py  config_service.py  cpu_timeseries_server.py  data_collector.py  evidence_service.py  gatekeeper.py  idempotency_service.py  intelligent_analysis.py  jetson_optimizer.py  liquidity.py  model_manager.py  performance_monitor.py  portfolio_service.py  scoring_engine.py  sentiment_server.py  timeseries_server.py
backend/app/utils/: gpu.py  health.py
config/: application.yaml  redlines.yaml
data/: README.md
deploy/docker/: Dockerfile.jetson  Dockerfile.sentiment  init-db.sql
deploy/grafana/dashboards/: dashboards.yml
deploy/grafana/datasources/: datasources.yml
deploy/prometheus/: prometheus.yml
deploy/redis/: redis.conf
frontend/: Dockerfile  next.config.js  nginx.conf
frontend/src/components/layout/: MainLayout.tsx
frontend/src/pages/: _app.tsx  alerts.tsx  equities.tsx  index.tsx  industries.tsx  memos.tsx  portfolios.tsx
frontend/src/services/: api.ts
frontend/src/styles/: globals.css
frontend/src/types/: api.ts
openapi/: openapi-v1.1.1-final.yaml
scripts/: dev-setup.sh  quick-start.sh  start.sh
